TestSuite/Verification/Error/Serial/Syntax/Control-Statement/out/includes/ForLoopTest.hxx

/*********************************************************************/
/*        This is a generated C++ Header file.                       */
/*        Generated by PatternDSL.                                   */
/*        Contains the function declarations for the source file     */
/*********************************************************************/

#ifndef ForLoopTest_HXX
#define ForLoopTest_HXX

uint randomizer(int n = 42) {
    srand(n);
    return rand();
}



#endif